--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <meta charset="UTF-8">
-<link rel="shortcut icon" href="http://philipbrown.co/favicon.ico">
+<link href="//philipbrown.co/favicon.ico" rel="shortcut icon" type="image/x-icon">
 <meta name="viewport" content="width=device-width, minimum-scale=1.0">
 <style>
   * {
