Change background colour to use the red from 'My Beautiful Dark Twisted Fantasy' :heart:

--- a/index.html
+++ b/index.html
@@ -1,97 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-<meta charset="UTF-8">
-<link href="//philipbrown.co/favicon.ico" rel="shortcut icon" type="image/x-icon">
-<meta name="viewport" content="width=device-width, minimum-scale=1.0">
-<style>
-  * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    border: 0;
-  }
-  html, body {
-    height: 100%;
-  }
-  html {
-    background: #5c6a76;
-    background: -moz-linear-gradient(45deg,  #5c6a76 0%, #2f3843 100%);
-    background: -webkit-gradient(linear, left bottom, right top, color-stop(0%,#5c6a76), color-stop(100%,#2f3843));
-    background: -webkit-linear-gradient(45deg,  #5c6a76 0%,#2f3843 100%);
-    background: -o-linear-gradient(45deg,  #5c6a76 0%,#2f3843 100%);
-    background: -ms-linear-gradient(45deg,  #5c6a76 0%,#2f3843 100%);
-    background: linear-gradient(45deg,  #5c6a76 0%,#2f3843 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5c6a76', endColorstr='#2f3843',GradientType=1 );
-  }
-  .card {
-    margin: auto;
-    position: relative;
-    top: 50%;
-    -webkit-transform: translateY(-50%);
-        -ms-transform: translateY(-50%);
-            transform: translateY(-50%);
-    width: 320px;
-  }
-  .avatar {
-    margin: auto;
-    display: block;
-    width: 75px;
-    height: 75px;
-    border: 2px solid #fff;
-    -webkit-border-radius: 50%;
-       -moz-border-radius: 50%;
-            border-radius: 50%;
-  }
-  article {
-    height: 100px;
-    text-align: center;
-  }
-  .about {
-    position: relative;
-    top: 50%;
-    -webkit-transform: translateY(-50%);
-        -ms-transform: translateY(-50%);
-            transform: translateY(-50%);
-  }
-  h1 {
-    margin-bottom: 10px;
-    font-weight: normal;
-    font-family: "proxima-nova",sans-serif;
-    font-style: normal;
-    font-weight: 700;
-    color: #ededed;
-    text-shadow: rgba(0, 0, 0, 1) 0px 1px 0px;
-  }
-  p {
-    margin-bottom: 15px;
-    font-weight: normal;
-    font-family: "proxima-nova",sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-  }
-  .icon {
-    margin: 0 5px;
-  }
-  .twitter {
-    color: #55acee;
-    background: url(twitter.svg) no-repeat center left;
-    background-size: 16px;
-    display: inline-block;
-    height: 16px;
-    width: 16px;
-    text-indent: -99999px;
-  }
-  .plane {
-    color: #EAEAEC;
-    background: url(plane.svg) no-repeat center left;
-    background-size: 16px;
-    display: inline-block;
-    height: 16px;
-    width: 16px;
-    text-indent: -99999px;
-  }
-</style>
+  <meta charset="UTF-8">
+  <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon">
+  <meta name="viewport" content="width=device-width, minimum-scale=1.0">
+  <link href="style.css" media="all" rel="stylesheet">
 <head>
   <title>Philip Brown</title>
 </head>
