--- a/index.html
+++ b/index.html
@@ -1,25 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-  <meta charset="UTF-8">
-  <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon">
-  <meta name="viewport" content="width=device-width, minimum-scale=1.0">
-  <link href="style.css" media="all" rel="stylesheet">
-<head>
-  <title>Philip Brown</title>
-</head>
-<body>
-  <div class="card">
-    <header>
-      <img class="avatar" src="philipbrown.jpg" alt="philip brown">
-    </header>
-    <article>
-      <div class="about">
-        <h1>Philip Brown</h1>
-        <a href="https://twitter.com/philipbrown" class="icon twitter">@philipbrown</a>
-      </div>
-    </article>
-  </div>
-  <script type="text/javascript" src="//use.typekit.net/dys6pcq.js"></script>
-  <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-</body>
+<!doctype html>
+<html class="no-js" lang="">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>Philip Brown</title>
+    <meta name="description" content="">
+    <link href="favicon.ico" rel="shortcut icon" type="image/x-icon">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <div class="card">
+      <h1 class="philip-brown">philip brown</h1>
+      <ul>
+        <li><a href="https://twitter.com/philipbrown">twitter</a></li>
+        <li><a href="https://github.com/philipbrown">github</a></li>
+        <li><a href="https://www.instagram.com/philipbrown">instagram</a></li>
+      </ul>
+    </div>
+  </body>
 </html>
