Update this whole thing

--- a/index.html
+++ b/index.html
@@ -1,22 +1,27 @@
 <!doctype html>
-<html class="no-js" lang="">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Philip Brown</title>
-    <meta name="description" content="">
-    <link href="favicon.ico" rel="shortcut icon" type="image/x-icon">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <div class="card">
-      <h1 class="philip-brown">philip brown</h1>
+<html>
+<head>
+  <meta charset="UTF-8" />
+  <link href="style.css" rel="stylesheet">
+  <link href="favicon.ico" rel="shortcut icon" type="image/x-icon">
+  <title>Philip Brown</title>
+</head>
+<body>
+  <div class="container">
+    <div class="photo-container">
+      <img src="philip-brown.jpg" alt="Philip Brown" class="photo" />
+    </div>
+    <div class="about">
+      <h1>Philip Brown</h1>
+      <p>Hey, I'm Philip Brown, a software developer from the UK.</p>
+      <p>I'm interested in the intersection of technology, productivity, and the future of work.</p>
+      <p>I used to write articles on business, technology and the internet at <a href="https://culttt.com">Culttt.</a></p>
+      <p>You can also find me here:</p>
       <ul>
-        <li><a href="https://twitter.com/philipbrown">twitter</a></li>
-        <li><a href="https://github.com/philipbrown">github</a></li>
-        <li><a href="https://www.instagram.com/philipbrown">instagram</a></li>
+        <li><a href="https://twitter.com/philipbrown">Twitter</a></li>
+        <li><a href="https://github.com/philipbrown">Github</a></li>
       </ul>
     </div>
-  </body>
+  </div>
+</body>
 </html>
