--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h1>Philip Brown</h1>
       <p>Hey, I'm Philip Brown, a software developer from the UK.</p>
       <p>I'm interested in the intersection of technology, productivity, and the future of work.</p>
-      <p>I used to write articles on business, technology and the internet at <a href="https://culttt.com">Culttt.</a></p>
+      <p>I write articles on business, technology and the internet at <a href="https://culttt.com">Culttt.</a></p>
       <p>You can also find me here:</p>
       <ul>
         <li><a href="https://twitter.com/philipbrown">Twitter</a></li>
